anoopsalesforce/src/objects/TODO_Task__c.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TODO_Project__c</fullName>
        <label>TODO Project</label>
        <referenceTo>TODO_Project__c</referenceTo>
        <relationshipLabel>TODO Tasks</relationshipLabel>
        <relationshipName>TODO_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TODO Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TODOTASK-{000000}</displayFormat>
        <label>TODO Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TODO Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>